Pronto para Paola corrigir

--- a/tex/pretext/agradecimentos.tex
+++ b/tex/pretext/agradecimentos.tex
@@ -2,7 +2,7 @@
 
 \chapter*{Dedicatória}
 
-Dedico essa tese à minha filha Sônia Braga Calsaverini. Houve um tempo em que eu achei que esta humilde tese seria a maior realização da minha vida  por muitos anos. Não é. É absolutamente insignificante em comparação ao senso de realização que sinto quando vejo você. 
+Dedico essa tese à minha filha Sônia Braga Calsaverini. Houve um tempo em que eu achei que esta tese seria a maior realização da minha vida por muitos anos. Não é. É absolutamente insignificante em comparação ao senso de realização que sinto quando vejo você.
 
 \chapter*{Agradecimentos}
 
