editei o arquivo copulas.tex

--- a/tex/copulas.tex
+++ b/tex/copulas.tex
@@ -1,6 +1,5 @@
 \chapter{Dependência Estatística, Teoria de Cópulas e Teoria de Informação}
-\section{Dependência Estatística e medidas de dependência}
-
+\section{Dependência estatística e medidas de dependência}
 
 \newthought{O conceito de dependência estatística} é central à teoria de probabilidades. Fazer hipóteses a respeito da dependência estatística entre as variáveis de interesse em um modelo é comum em diversas áreas --- da física à análise financeira. Não é óbvio, entretanto, como expressar esse conceito de maneira precisa. A formalização precisa desse conceito é um dos objetivos desse capítulo. De maneira informal e grosseira, dependência estatística diz respeito a quanta \textit{informação} se obtém a respeito de uma variável quando o valor de outra variável é conhecido. Os dois casos extremos podem ser mais facilmente entendidos em primeira análise: o caso de completa independência e o caso de completa dependência. Duas variáveis são ditas independentes se sua distribuição conjunta pode ser fatorada em um produto\footnote{Manteremos o foco de nossa atenção em distribuições bivariadas, uma vez que a generalização é imediata.}:
 \begin{equation}
