--- a/tex/pretext/epigrafe.tex
+++ b/tex/pretext/epigrafe.tex
@@ -32,6 +32,7 @@ Was how to shoot at someone who outdrew yah.\\
 It’s not a cry you can hear at night,\\
 It’s not somebody who has seen the light,\\
 It’s a cold and it’s a broken Hallelujah.\\[1.5ex]
+Hallelujah, Hallelujah, Hallelujah, Hallelujah\\[1.5ex]
 You say I took the name in vain.\\
 I don't even know the name.\\
 But if I did, well, really, what's it to yah?\\
