--- a/bibdatabase.bib
+++ b/bibdatabase.bib
@@ -601,5 +601,51 @@ pages={469-93},
   publisher={TED Talk}
 }
 
+@book{Clark2008,
+  title={Islands of Inquiry: Colonisation, seafaring and the archaeology of maritime landscapes},
+  editor ={Geoffrey Clark and Foss Leach and Sue O'Connor},
+  isbn={9781921313905},
+  series={Terra Australis},
+  url={http://books.google.com.br/books?id=NZ0-IiAZ\_ZwC},
+  year={2008},
+  publisher={ANU E Press}
+}
 
+@inbook{Kennett2008,
+  author = {Douglas J. Kennett and Bruce Winterhalder},
+  chapter = {Demographic expansion, despotism and the colonisationof East and South Polynesia},
+  pages = {87--96},
+  crossref = {Clark2008}
+ }
+ 
+@book{Earle1997,
+  title={How Chiefs Come to Power: The Political Economy in Prehistory},
+  author={Earle, T.K.},
+  isbn={9780804728560},
+  lccn={lc96041943},
+  series={Antropology. Political science},
+  url={http://books.google.com.br/books?id=4AjAk15WSbQC},
+  year={1997},
+  publisher={Stanford University Press}
+}
 
+@article{Summers2005,
+  title={The evolutionary ecology of despotism},
+  author={Summers, K.},
+  journal={Evolution and Human Behavior},
+  volume={26},
+  number={1},
+  pages={106--135},
+  year={2005},
+  publisher={Elsevier}
+}
+@article{Wiessner2002,
+  title={The Vines of Complexity: Egalitarian Structures and the Institutionalization of Inequality among the \protect{Enga}},
+  author={Wiessner, P.},
+  journal={Current anthropology},
+  volume={43},
+  number={2},
+  pages={233--269},
+  year={2002},
+  publisher={University of Chicago Press}
+}
