--- a/tex/apendices/provas.tex
+++ b/tex/apendices/provas.tex
@@ -7,7 +7,7 @@ Este apêndice contém demonstrações dos teoremas exibidos na seção \ref{sec
 \begin{Teorema}
     Uma vez que uma representação consistente de plausibilidades $(P|Q)$ com um ordenamento bem definido foi encontrada, sempre é possível encontrar uma outra equivalente $\pi(P|Q)$, de forma que:
     \begin{equation}
-	\label{eq:productrule}
+	\label{eq:productrule2}
 	\pi(P_1\wedge P_2|Q) = \pi(P2 | Q \wedge P_1) \pi(P_1| Q)
     \end{equation}
 \begin{proof}
@@ -31,7 +31,7 @@ com $g(\cdot)$ uma função monotônica. Sendo $g(u)$ monotônica, pode-se redef
 \[
  \pi(P|Q) = g((P|Q))
 \]
-se obtém a equação \eqref{eq:productrule}, que é reminiscente da regra do produto da Teoria das Probabilidades:
+se obtém a equação \eqref{eq:productrule2}, que é reminiscente da regra do produto da Teoria das Probabilidades:
 \[
   \pi(P_1\wedge P_2|Q) = \pi(P2 | Q \wedge P_1) \pi(P_1| Q)
 \]
@@ -66,7 +66,7 @@ Independentemente de $Q$, $\pi(P|Q\wedge\bar{P})$ deve ser também igual a $P_F$
 \begin{Teorema}
 Para qualquer conjunto de três proposições $P_1$, $P_2$ e $Q$, temos:
 \begin{equation}
- \label{eq:regradebayes}
+ \label{eq:regradebayes2}
  \pi(P2 | Q \wedge P_1)  = \frac{\pi(P1 | Q \wedge P_2) \pi(P_2| Q)}{\pi(P_1| Q)}.
 \end{equation}
 \begin{proof}
@@ -79,7 +79,7 @@ Aplicando a regra do produto em ambos os membros da equação acima, temos:
 \[
  \pi(P2 | Q \wedge P_1) \pi(P_1| Q) = \pi(P1 | Q \wedge P_2) \pi(P_2| Q)
 \]
-que implica trivialmente na equação \eqref{eq:regradebayes} que é similar ao teorema de Bayes da Teoria de Probabilidades.
+que implica trivialmente na equação \eqref{eq:regradebayes2} que é similar ao teorema de Bayes da Teoria de Probabilidades.
 \end{proof}
 \end{Teorema}
 
