--- a/tex/conclusoes.tex
+++ b/tex/conclusoes.tex
@@ -49,8 +49,9 @@ que são os valores esperados do grau médio e do grau máximo dos nós dos graf
 \item  A terceira configuração de interesse ocorre quando $\alpha$ é pequeno ou $n$ é grande. Nesse caso, os grafos de todos os agentes se tornam grafos tipo estrela, com um nó central bem definido. Nessa fase as flutuações se tornam muito menores, e os grafos se congelam com um nó central específico. Se há forte correlação entre os grafos ($g$ grande), uma grande parte dos grafos vão se organizar em torno do mesmo nó central, resultando em um status social diferenciado para um dos agentes. 
 \end{itemize}
 
-\newthought{Interpretados à luz da teoria da reversão de dominância}, esses resultados oferece um quadro em que, para agrupamentos pequenos, ou com elevada capacidade cognitiva, os agentes se organizam em grupos igualitários. Já para agrupamentos maiores, ou menor capacidade cognitiva, um dos agentes obtém uma posição social privilegiada, que lhe permite escapar da dominância dos outros membros do grupo e afirmar-se como líder. 
+\newthought{O modelo indica que apenas limitações cognitivas} são suficientes para produzir uma quebra de simetria na representação interna dos agentes das relações sociais do grupo, ainda que outras variáveis sociais sejam simétricas. Há evidência empírica\cite{Wiessner2002} (\citet{Wiessner2002}) de correlação entre posição social percebida e o status social como medido pela distribuição de recursos, indicando um quadro em que essa quebra de simetria na percepção dos agentes leva a uma quebra de simetria de fato na rede social. Além disso, a teoria da reversão de dominância sugere que, em uma representação simétrica, os grupos deveriam se organizar de forma igualitária devido à resistência oferecida pelo grupo a dominação por líderes emergentes. Na situação de quebra de simetria, o mecanismo de reversão de dominância deve perder eficiência diante do capital social acumulado do indivíduo que ocupa uma posição central na rede social inferida de uma maioria dos agentes.
 
-\newthought{Esse quadro é compatível} com o observado empiricamente na tese da \textit{``u-shaped evolution''}. O aparecimento do gênero \textit{Homo}, com elevada capacidade cognitiva, resultado da pressão seletiva associada à necessidade de cérebros cada vez maiores para lidar com ambientes sociais cada vez mais complexos, leva a uma transição de grupos hierárquicos (grandes primatas pré-humanos) para grupos igualitários. O posterior surgimento da agricultura eleva a concentração de indivíduos a níveis inéditos, sem tempo para ajuste evolutivo da capacidade cognitiva, o que causa uma transição para uma sociedade mais hierárquica. 
 
-\newthought{Se correto}, esse modelo indica que apenas limitações cognitivas são suficientes para o surgimento de indivíduos com posição social centralizada, ainda que outras variáveis sociais sejam simétricas. A validade e utilidade analítica desse modelo deverá ser avaliada comparando suas previsões a dados empiricos, que podem ser obtidos em pesquisas etnográficas comparativas. 
+\newthought{Esse quadro é compatível} com o observado empiricamente na tese da \textit{``u-shaped evolution''}. O aparecimento do gênero \textit{Homo}, com elevada capacidade cognitiva, resultado da pressão seletiva associada à necessidade de cérebros cada vez maiores para lidar com ambientes sociais cada vez mais complexos, leva a uma transição de grupos hierárquicos (grandes primatas pré-humanos) para grupos igualitários. O posterior surgimento da agricultura eleva a concentração de indivíduos a níveis inéditos, sem tempo para ajuste evolutivo da capacidade cognitiva, o que causa uma transição para uma sociedade hierárquica. 
+
+A utilidade analítica desse modelo deverá ser avaliada comparando suas previsões a dados empiricos. O modelo prevê uma relação entre o número de agentes e a organização social, o que é corroborado por evidências encontradas em \citet{Currie2010}\cite{Currie2010} e \citet{Kennett2008}\cite{Kennett2008}(em \citet{Clark2008}). Além disso, o modelo prevê que para valores maiores do parâmetro $\beta$, o tamanho de grupo necessário para a transição para a fase ``despótica'' é menor. Em outras palavras, a fase mais fluida, em que há flutuações na organização social, é menos resiliente quanto maior o valor de $\beta$. O parâmetro $\beta$ é interpretado como um mixto de pressão ecológica (interpretação corroborada por, por exemplo, \citet{Earle1997}\cite{Earle1997}) e pressão social de pares(ver: \citet{NCaticha2011}). A relação entre pressões ambientais e surgimento de estruturas despóticas encontra ressonância em dados empíricos, por exemplo em \citet{Kennett2008}, e a relação entre ambientes mais difíceis e surgimento de hierarquia é observada em diversos estudos revisados por \citet{Summers2005}\cite{Summers2005}. Análises adicionais, no entanto, são necessárias para determinar com maior grau de confiança a relação entre as previsões do modelo e dados empíricos, que podem ser obtidos em amplas pesquisas etnográficas. 
