--- a/tex/pretext/agradecimentos.tex
+++ b/tex/pretext/agradecimentos.tex
@@ -8,8 +8,12 @@ Dedico essa tese à minha filha Sônia Braga Calsaverini. Houve um tempo em que 
 
 Agradeço à minha esposa Ana Paola pela paciência para suportar minhas angústias, pela presença constante e apoio e por me proporcionar a maior alegria do universo, que é a minha filha. Agradeço à minha mãe Lourdes e ao meu pai José Arimatéia por mais do que a simples existência, por uma existência plena de realizações que só foi possível por causa de vocês. Agradeço à minha sogra, Maria de Lourdes, por ter sido minha quase mãe nesses últimos 6 anos e por ter suportado toda a aporrinhação de ter um genro em casa por tanto tempo.
 
+Agradeço aos professores Nestor Caticha e Renato Vicente pelos cinco anos de paciência e por proporcionar em nosso grupo de pesquisa uma ambiente intelectual que acredito ser ímpar no Instituto de Física e raro em toda a Universidade de São Paulo. Não tenho dúvida de que esse ambiente era o lugar certo para o meu doutorado e que a orientação desses dois professores foram peça chave da minha maturação intelectual. 
+
 Agradeço a todo resto da minha família: irmãos, irmãs, madrastas, avôs e avós, a todos os que estão aqui e que não estão mais. Nunca deixo de pensar em vocês. 
 
 Agradeço aos meus amigos Caio, Camila, Henrique e Andrea, que tão próximos estiveram e tanto fizeram por mim e minha pequena família nos últimos anos. Vocês fizeram por mim muito mais do que eu posso retribuir, oferecendo ajuda mesmo sem eu pedir.
+
+Agradeço ao CNPQ pelo financiamento desse trabalho.
 
 \end{titlepage}
