--- a/tex/pretext/folhaderosto.tex
+++ b/tex/pretext/folhaderosto.tex
@@ -13,7 +13,7 @@
 \textsc{\LARGE \authorinfo }\\[1.5cm]
 \hfill\begin{minipage}{0.7\textwidth}
 \Large
-Tese apresentada ao Instituto de Física da Universidade de São Paulo para obtenção do título de Doutor em Ciências. 
+Tese de doutorado apresentada ao Instituto de Física para a obtenção do título de Doutor em Ciências. 
 \end{minipage}\\[1.cm]
 % Author and supervisor
 \hfill\begin{minipage}{0.7\textwidth}
@@ -29,7 +29,7 @@ Prof.~Dr. Renato Vicente
 
 % Bottom of the page
 \textsc{\LARGE São Paulo}\\
-\textsc{\LARGE \today}
+\textsc{\LARGE \the\year}
 
 \end{center}
 \end{fullwidth}
