--- a/tex/pretext/paginatitulo.tex
+++ b/tex/pretext/paginatitulo.tex
@@ -4,7 +4,7 @@
 
 % Upper part of the page
 
-\textsc{\LARGE Universidade de São Paulo - Instituto de Física}\\[3cm]
+\textsc{\LARGE Universidade de São Paulo \\ Instituto de Física}\\[3cm]
 
 % Title
 \HRule \\[0.4cm]
@@ -15,7 +15,7 @@
 
 % Bottom of the page
 \textsc{\LARGE São Paulo}\\
-\textsc{\LARGE \today}
+\textsc{\LARGE \the\year}
 
 \end{center}
 \end{fullwidth}
