--- a/tex/autoridade.tex
+++ b/tex/autoridade.tex
@@ -12,14 +12,14 @@
 
 \newthought{Os grandes primatas}, em particular os humanos, apresentam vidas sociais intensas. Atividades sociais, formação de coalizões, cooperação para realização de diversas tarefas, guerras, compartilhamento de alimentos, disputas por liderança \textit{et cetera}, situações ubíquas em agrupamentos humanos, não são entretanto limitadas a essa espécie mas são pervasivas em todas as espécies desse grupo. A variedade das experiências sociais em espécies como chimpanzés e bonobos são comparáveis apenas à da espécie humana\cite[-3.2cm]{deWaal2007, deWaal1990}. Entretanto a natureza dessa experiência social pode ser bem diferente entre humanos e outras espécies aparentadas. Há diferentes pontos de equilíbrio na divisão dos recursos e na tomada de risco por diferentes membros do grupo em atividades coletivas, como coleta de alimentos, defesa contra predadores, cuidado com ninhadas, etc\cite{Vehrencamp1983,Boehm2001}. Há grupos --- ditos igualitários --- em que recursos são distribuidos de forma igualitária ou de maneira aproximadamente proporcional ao risco tomado, e há grupos --- ditos hierárquicos, ou despóticos --- em que poucos membros do grupo têm acesso desproporcional ao fruto dessas atividades, em detrimento dos outros membros. Na natureza se observa um contínuo de variações de comportamento entre esses dois campos extremos. 
 
-\newthought{A maioria das espécies} apresenta um comportamento social básico razoavelmente fixo, ainda que flexível \citep{Boehm2001}. Os grandes primatas tipicamente vivem em sociedades hierárquicas, marcadas por uma grande concentração dos usos de recursos energéticos e reprodutivos por parte de poucos membros do grupo. Por outro lado, humanos se destacam por uma grande variabilidade nesse espectro etológico social. Certos grupos humanos apresentam organização fortemente centralizada e hierárquica, com concentração de uso de recursos e riqueza. Outros grupos apresentam sociedades basicamente equalitárias, com compartilhamento de recursos e alimentos, ausência de distinções de status, autoridades ou concentração de riqueza\footnote{Note que nos interessamos neste trabalho por agrupamentos de humanos caçadores-coletores que podem trazer mais insights sobre humanos em seu contexto evolutivo.}. O quebra-cabeças associado à origem dessa variabilidade é uma matéria de ativa discussão acadêmica e, a intenção deste trabalho é tentar lançar luz sobre o problema através de um modelo matemático com origem em certas observações empíricas recentes.
+\newthought{A maioria das espécies} apresenta um comportamento social básico razoavelmente fixo, ainda que flexível \citep{Boehm2001}. Os grandes primatas tipicamente vivem em sociedades hierárquicas, marcadas por uma grande concentração dos usos de recursos energéticos e reprodutivos por parte de poucos membros do grupo. Por outro lado, humanos se destacam por uma grande variabilidade nesse espectro etológico social. Certos grupos humanos apresentam organização fortemente centralizada e hierárquica, com concentração de uso de recursos e riqueza. Outros grupos apresentam sociedades basicamente equalitárias, com compartilhamento de recursos e alimentos, ausência de distinções de status, autoridades ou concentração de riqueza\footnote[][-3cm]{Note que nos interessamos neste trabalho por agrupamentos de humanos caçadores-coletores que podem trazer mais insights sobre humanos em seu contexto evolutivo.}. O quebra-cabeças associado à origem dessa variabilidade é uma matéria de ativa discussão acadêmica e, a intenção deste trabalho é tentar lançar luz sobre o problema através de um modelo matemático com origem em certas observações empíricas recentes.
 
 \section{Evidências empiricas}
 
 \subsection{``U-shaped evolution''} 
-\newthought{O registro arqueológico revela} uma dinâmica temporal na organização social dos humanos através da pré-história\cite[-3cm]{Knauft1991, Marcus2008, Foley1987}. Os humanos, descendendo de primatas com provável organização social hierárquica, passaram por um período de grupos equalitários, sem autoridade central, com baixa densidade populacional. No neolítico houve uma transição para grupos fortemente hierárquicos, conforme a densidade populacional aumenta após a revolução agrícola. Esse quadro, ilustrado pela figura \ref{fig:ushaped}, é denominado em \citep{Knauft1991} \emph{``a U-shaped evolution''}. 
+\newthought{O registro arqueológico revela} uma dinâmica temporal na organização social dos humanos através da pré-história\cite[-7cm]{Knauft1991, Marcus2008, Foley1987}. Os humanos, descendendo de primatas com provável organização social hierárquica, passaram por um período de grupos equalitários, sem autoridade central, com baixa densidade populacional. No neolítico houve uma transição para grupos fortemente hierárquicos, conforme a densidade populacional aumenta após a revolução agrícola. Esse quadro, ilustrado pela figura \ref{fig:ushaped}, é denominado em \citep{Knauft1991} \emph{``a U-shaped evolution''}. 
 
-\newthought{Hoje, sociedades humanas} preenchem todo o espectro de organização social  e evidências etnográficas também apontam para uma relação entre o tamanho dos grupos de humanos caçadores-coletores e suas formas de organização social\cite{Currie2010}. Grupos pequenos de humanos tendem a apresentar organização equalitária, sem concentração de poder. Grupos maiores tendem a apresentar organizações hierárquicas, concentração e hereditariedade de poder. 
+\newthought{Hoje, sociedades humanas} preenchem todo o espectro de organização social e evidências etnográficas e arqueológicas também apontam para uma relação entre o tamanho dos grupos de humanos caçadores-coletores e suas formas de organização social\cite[-5cm]{Currie2010, Kennett2008}. Grupos pequenos de humanos tendem a apresentar organização equalitária, sem concentração de poder. Grupos maiores tendem a apresentar organizações hierárquicas, concentração e hereditariedade de poder. 
 \begin{figure}
 	\centering
 	\includegraphics[width = 1.05\textwidth]{figuras/ushaped.png}
@@ -174,7 +174,8 @@ onde $\beta$, uma espécie de inverso de temperatura, regula a importância rela
 
 O parâmetro $\alpha$ (ou sua versão normalizada, $a$) regula a importância relativa entre os dois custos --- social e cognitivo. O valor de $\alpha$ é regulado pela capacidade cognitiva dos agentes: quanto maior a capacidade de realizar cálculos sociais, menor é a importância do custo cognitivo, maior é o valor de $\alpha$. No presente trabalho $\alpha$ será, portanto, interpretado como uma medida da capacidade cognitiva dos agentes. 
 
-O parâmetro $\beta$ regula a escala em que flutuações no valor do custo total são toleradas. Para $\beta$ grande, variações no custo total acima do custo mínimo são muito pouco prováveis. Para valores maiores de $\beta$ as mesmas flutuações apresentam probabilidades maiores. Dessa forma, $\beta$ regula o quão prováveis são configurações que consistem de flutuações em torno das configurações ótimas discutidas na seção \emph{\nameref{sec:mincusto}}. Flutuações em torno do custo mínimo representam um dispêndio extra de energia e recursos que poderiam ser gastos em outras atividades, portanto $\beta$ pode ser parcialmente entendido como uma variável ecológica --- escassez de recursos ou ambientes sociais mais rigorosos implicam em menor tolerarância a flutuações do custo total. Assim, $\beta$ é uma variável que regula a intensidade da pressão para otimização do custo total, que pode ter origem ambiental ou social. 
+O parâmetro $\beta$ regula a escala em que flutuações no valor do custo total são toleradas. Para $\beta$ grande, variações no custo total acima do custo mínimo são muito pouco prováveis. Para valores maiores de $\beta$ as mesmas flutuações apresentam probabilidades maiores. Dessa forma, $\beta$ regula o quão prováveis são configurações que consistem de flutuações em torno das configurações ótimas discutidas na seção \emph{\nameref{sec:mincusto}}. Flutuações em torno do custo mínimo representam um dispêndio extra de energia e recursos que poderiam ser gastos em outras atividades, portanto $\beta$ pode ser parcialmente entendido como uma variável ecológica --- escassez de recursos ou ambientes sociais mais rigorosos implicam em menor tolerarância a flutuações do custo total. Assim, $\beta$ é uma variável que regula a intensidade da pressão para otimização do custo total, que pode ter origem ambiental ou social. Essa interpretação encontra ressonância em \citet{Earle1997}\cite{Earle1997}, que identifica fatores como pressão populacional, falta de recursos naturais, seca e guerras como fatores de mudança de organização social. 
+
 
 \subsection{Resultados numéricos para agentes isolados}
 \newthought{Simulações de Monte Carlo} desse modelo foram feitas usando o algoritmo de Metropolis\cite{landau2005} Partindo de um grafo inicial aleatório (sorteado do ensemble de Erdos-Rényi, com fração de arestas $\frac{1}{2}$), a cada passo do algoritmo é proposta uma mudança em uma aresta do grafo ---- adicionando uma aresta faltante ou removendo uma aresta existente. Caso a mudança não quebre a conectividade do grafo, ela será aceita com probabilidade dada pelo fator de Gibbs: 
