alteracoes Nestor concluidas. Falta apenas apendice do teorema de Sklar

--- a/main.tex
+++ b/main.tex
@@ -31,8 +31,7 @@
 
   %body of appendices
   \appendix
-% 	  \include{./tex/apendices/glossario}
+	  \include{./tex/apendices/sklar}
 	  \include{./tex/apendices/provas}
-% 	  \include{./tex/apendices/erdosrenyi}
 
 \end{document}
