--- a/tex/apendices/provas.tex
+++ b/tex/apendices/provas.tex
@@ -1,4 +1,4 @@
-\chapter{Provas dos teoremas de Cox}
+\chapter{Teoremas de Cox}
 \label{ap:provateoremas}
 
 Este apêndice contém demonstrações dos teoremas exibidos na seção \ref{sec:probabilidadeseinferencia}, \emph{\nameref{sec:probabilidadeseinferencia}}. O método de demonstração consiste em considerar casos em que há informação completa, ou seja, em que é válida a lógica tradicional, em que existam duas formas diferentes de determinar a mesma plausibilidade. Impondo consistência sobre essas situações, se obtém equações funcionais cujas soluções implicam no resultado desejado. 
