--- a/tex/conclusoes.tex
+++ b/tex/conclusoes.tex
@@ -41,15 +41,15 @@ que são os valores esperados do grau médio e do grau máximo dos nós dos graf
 
 \newthought{O modelo apresenta três fases de interesse:} 
 \begin{itemize}
- \item A primeira ocorre quando $\alpha$ é grande ou $n$ é pequeno. Nesse caso, os grafos são basicamente grafos aleatórios, com elevado grau de conectividade. Os agentes são capazes de manter a maioria da informação social e nenhum dos agentes ocupa posições privilegiadas no sistema. As outras duas configurações são importantes para valores maiores de $g$, em que os grafos dos diferentes agentes se tornam fortemente correlacionados.
+ \item A primeira ocorre quando $\alpha$ é grande ou $n$ é pequeno. Nesse caso, os grafos são basicamente grafos aleatórios, com elevado grau de conectividade. Os agentes são capazes de manter a maioria da informação social e nenhum dos agentes ocupa posições privilegiadas no sistema.
  
- \item A segunda configuração interessante ocorre para valores intermediários de $\alpha$ e $n$. Nessa situação, o sistema está em uma fase fluida, em que flutuações são altas, mas há uma certa ocorrência de nós temporariamente centrais, que ocupam uma posição de \textit{hub} social por um certo tempo. Quanto maior a pressão ecológica $\beta$, menos pronunciada é essa fase, que ocorre para regiões cada vez menores do espaço de parâmetros conforme $\beta$ aumenta.
+ \item A segunda fase interessante ocorre para valores intermediários de $\alpha$ e $n$ e valores maiores de $g$, em que os grafos dos diferentes agentes se tornam fortemente correlacionados. Nessa situação, o sistema está em uma fase fluida, em que flutuações são altas, mas há uma certa ocorrência de nós temporariamente centrais, que ocupam uma posição de \textit{hub} social por um certo tempo. Quanto maior a pressão ecológica $\beta$, menos pronunciada é essa fase, que ocorre para regiões cada vez menores do espaço de parâmetros conforme $\beta$ aumenta.
  
  
-\item  A terceira configuração de interesse ocorre quando $\alpha$ é pequeno ou $n$ é grande. Nesse caso, os grafos de todos os agentes se tornam grafos tipo estrela, com um nó central bem definido. Nessa fase as flutuações se tornam muito menores, e os grafos se congelam com um nó central específico. Se há forte correlação entre os grafos ($g$ grande), uma grande parte dos grafos vão se organizar em torno do mesmo nó central, resultando em um status social diferenciado para um dos agentes. 
+\item  A terceira fase ocorre quando $\alpha$ é pequeno ou $n$ é grande, também para maiores valores de $g$. Nesse caso, os grafos de todos os agentes se tornam grafos tipo estrela, com um nó central bem definido. Nessa fase as flutuações se tornam muito menores, e os grafos se congelam com um nó central específico. Se há forte correlação entre os grafos ($g$ grande), uma grande parte dos grafos vão se organizar em torno do mesmo nó central, resultando em um status social diferenciado para um dos agentes. 
 \end{itemize}
 
-\newthought{O modelo indica que apenas limitações cognitivas} são suficientes para produzir uma quebra de simetria na representação interna dos agentes das relações sociais do grupo, ainda que outras variáveis sociais sejam simétricas. Há evidência empírica\cite{Wiessner2002} (\citet{Wiessner2002}) de correlação entre posição social percebida e o status social como medido pela distribuição de recursos, indicando um quadro em que essa quebra de simetria na percepção dos agentes leva a uma quebra de simetria de fato na rede social. Além disso, a teoria da reversão de dominância sugere que, em uma representação simétrica, os grupos deveriam se organizar de forma igualitária devido à resistência oferecida pelo grupo a dominação por líderes emergentes. Na situação de quebra de simetria, o mecanismo de reversão de dominância deve perder eficiência diante do capital social acumulado do indivíduo que ocupa uma posição central na rede social inferida de uma maioria dos agentes.
+\newthought{O modelo indica que apenas limitações cognitivas} são suficientes para produzir uma quebra de simetria na representação interna dos agentes das relações sociais do grupo, ainda que outras variáveis sociais sejam simétricas. Há evidência empírica\cite{Earle1997, Wiessner2002} (\citet{Earle1997, Wiessner2002}) de correlação entre posição social percebida e o exercício factual de autoridade, indicando um quadro em que essa quebra de simetria na percepção dos agentes leva a uma quebra de simetria de fato na rede social. Além disso, a teoria da reversão de dominância sugere que, em uma representação simétrica, os grupos deveriam se organizar de forma igualitária devido à resistência oferecida pelo grupo a dominação por líderes emergentes. Na situação de quebra de simetria, o mecanismo de reversão de dominância deve perder eficiência diante do capital social acumulado do indivíduo que ocupa uma posição central na rede social inferida de uma maioria dos agentes.
 
 
 \newthought{Esse quadro é compatível} com o observado empiricamente na tese da \textit{``u-shaped evolution''}. O aparecimento do gênero \textit{Homo}, com elevada capacidade cognitiva, resultado da pressão seletiva associada à necessidade de cérebros cada vez maiores para lidar com ambientes sociais cada vez mais complexos, leva a uma transição de grupos hierárquicos (grandes primatas pré-humanos) para grupos igualitários. O posterior surgimento da agricultura eleva a concentração de indivíduos a níveis inéditos, sem tempo para ajuste evolutivo da capacidade cognitiva, o que causa uma transição para uma sociedade hierárquica. 
