--- a/tex/pretext/resumo.tex
+++ b/tex/pretext/resumo.tex
@@ -1,12 +1,17 @@
 \chapter*{Resumo}
 \addcontentsline{toc}{chapter}{\protect\numberline{}Resumo}
-\newthought{Neste trabalho}, exploramos dois tópicos de aplicação de teoria de informação e mecânica estatística a problemas de interesse em finanças, economia e antropologia social. No primeiro tópico, exploramos a conexão entre a teoria de dependência estatística e a teoria de informação através da teoria de cópulas. Após uma revisão do conceito de cópulas, reformulamos a definição de medidas de dependência de Rényi\cite{Renyi1959} usando esse conceito e mostramos que a informação mútua satisfaz todos os requisitos para ser uma medida de dependência. Em seguida, mostramos uma relação entre a informação mútua e a entropia da distribuição cópula e uma relação mais específica para a decomposição da informação mútua de distribuições elípticas, em uma parte devido à dependência gaussiana linear e outra parte não-linear. As consequências dessas duas decomposições sobre o risco do uso de pseudo-medidas de dependências são então discutidas. Esses resultados são usados para desenvolver um método para detectar desvio de gaussianidade na dependência de séries temporais e para ajuste de cópulas t sobre dados empíricos\cite{Calsaverini2009}.
 
-\newthought{No segundo tópico}, desenvolvemos um modelo para emergência de autoridade em sociedades humanas. Discutimos as motivações empíricas com raízes na neurociência, na primatologia e na antropologia para um modelo matemático que explique o espectro amplo de tipos de organização social humana no eixo igualitário-hierárquico. O modelo resulta da aplicação de teoria de informação sobre uma hipótese sobre os custos evolutivos envolvidos. O modelo apresenta um diagrama de fases rico, com diferentes regimes que podem ser interpretadas como correspondendo a diferentes tipos de organização social, desde igualitária até hierárquica. Os parâmetros de controle do sistema são identificados com a capacidade cognitiva da espécie em questão e as pressões ecológica e social em que o grupo está imerso.
+\newthought{No presente trabalho}, exploramos dois temas de interesse em finanças, economia e antropologia social, através da aplicação de técnicas da teoria da informação e da mecânica estatística.
+
+\newthought{No primeiro tópico}, estudamos a conexão entre teoria de dependência estatística, teoria de informação e teoria da cópulas. O conceito de distribuição cópula é revisto e aplicado em reformulação das definições de medida de dependência dadas por Rényi \cite{Renyi1959}. Em seguida, mostramos que a informação mútua satisfaz todos os requisitos para ser uma boa medida de dependência. Obtemos uma identidade entre a informação mútua e a entropia da distribuição cópula e uma decomposição mais específica da informação mútua de uma distribuição elíptica nas suas partes linear e não-linear. Avaliamos o risco de usar quantidades ingênuas como medidas de dependência estatística, mostrando que a correlação linear pode subestimar grosseiramente a dependência. Esses resultados são utilizados para desenvolver um método de detectação de desvios de dependência gaussiana em pares de variáveis ​​aleatórias e aplicá-lo a séries temporais financeiras. Finalmente, discutimos um método para ajustar t-cópulas a dados empíricos \cite{Calsaverini2009} através da medida da informação mútua e do tau de Kendall.
+
+\newthought{No segundo tópico}, desenvolvemos um modelo para o surgimento de autoridade em sociedades humanas pré-agrícolas. Discutimos motivações empíricas com raízes em neurociência, primatologia e antropologia para um modelo matemático capaz de explicar a ampla variabilidade de formas de organização social humana no eixo igualitário-hierárquico. O modelo resulta da aplicação de teoria da informação a uma hipótese sobre os custos evolutivos envolvidos na vida social. O modelo gera um diagrama de fase rico, com diferentes regimes que podem ser interpretados como diferentes tipos de organização social. Os parâmetros de controler do modelo estão ligados à capacidade cognitiva da espécie em questão, ao tamanho do grupo e a pressões ecológicas e sociais.
 
 \chapter*{Abstract}
 \addcontentsline{toc}{chapter}{\protect\numberline{}Abstract}
  
-\newthought{In this work}, we explore two topics of interest in the application of information theory and statistical mechanics techniques to problems in finance, economics and social anthropology. In the fisrt topic, we study the conexion between statistical dependency theory and information theory mediated by copula theory. After a revision of the concept of copulas, we reformulate the definition of dependency measures given by Rényi \cite{Renyi1959} using this concepyt and show that mutual information satisfy all the requirements to be a dependency measure. We then show a relationship between mutual information and copula entropy and a more specific decomposition of the mutual information of an elliptical distribution into its linear and non-linear parts. We evaluate the risk of using naive pseudo-dependency measures. Those results are then used to develop a method to detect deviation from gaussianity in the dependency of time series and a method to adjust t-copulas to data\cite{Calsaverini2009}.
+\newthought{In the present work} we explore two topics of interest in finance, economics and social anthropology through the application of techniques from information theory and statistical mechanics. 
 
-\newthought{On the second topic}, we develop a model for the emergence of authority in early human societies. We discuss empirical motivations with roots in neuroscience, primatology and anthropology for a mathematical model able to explain the spectrum of observed types of human social organization in the egalitarian-hierarchical axis. The model results from the application of information theory on a hypothesys about the evolutive costs involved in social life. The model generates a rich phase diagram, with diferent regimes which can be interpreted as different types of societal organization, from egalitarian to hierarchical. The control parameters of the model are connected to the cognitive capacity of the species in question and ecological and social pressures.
+\newthought{In the first topic} we study the connexion between statistical dependency theory, information theory and copula theory. The concept of copula distribution is reviewed and applied to the reformulation of the definition of dependency measures given by Rényi \cite{Renyi1959}. It is then shown that the mutual information satisfy all the requirements to be a good dependency measure. We derive an identity between mutual information and the entropy of the copula distribution and a more specific decomposition of the mutual information of an elliptical distribution into its linear and non-linear parts. We evaluate the risk of using naive measures as statistical dependency measures by showing that linear correlation can grossly underestimate dependency. Those results are used to develop a method to detect deviation from gaussian dependence in pairs of random variables and apply it to financial time series. Finally, we discuss a method to adjust t-copulas to empirical data\cite{Calsaverini2009} through the determination of the mutual information and Kendall's tau.
+
+\newthought{In the second topic} we develop a model for the emergence of authority in pre-agricultural human societies. We discuss empirical motivations with roots in neuroscience, primatology and anthropology for a mathematical model able to explain the ample variability of forms of human social organization in the egalitarian-hierarchical axis. The model results from the application of information theory on a hypothesis about the evolutive costs involved in social life. It generates a rich phase diagram, with different regimes which can be interpreted as different types of societal organization, from egalitarian to hierarchical. The control parameters of the model are connected to the cognitive capacity of the species in question, the size of the group and ecological and social pressures.
