--- a/bibdatabase.bib
+++ b/bibdatabase.bib
@@ -649,3 +649,14 @@ pages={469-93},
   year={2002},
   publisher={University of Chicago Press}
 }
+
+@article{Ruschendorf2009,
+  title={On the distributional transform, Sklar's theorem, and the empirical copula process},
+  author={R{\"u}schendorf, L.},
+  journal={Journal of Statistical Planning and Inference},
+  volume={139},
+  number={11},
+  pages={3921--3927},
+  year={2009},
+  publisher={Elsevier}
+}
