--- a/confs/commands.tex
+++ b/confs/commands.tex
@@ -17,6 +17,7 @@
 
 
 \newtheorem{Teorema}{Teorema}
+\newtheorem{Definicao}{Definição}
 \newtheorem{Lema}{Lema}
 \newtheorem{Proposicao}{Proposição}
 \newtheorem*{Principio}{Princípio da Máxima Entropia}
