FINISHED, FOR REAL

--- a/bibdatabase.bib
+++ b/bibdatabase.bib
@@ -660,3 +660,11 @@ pages={469-93},
   year={2009},
   publisher={Elsevier}
 }
+
+@unpublished{Faugeras2012,
+  title={Sklar's theorem by probabilistic continuation and two consistency results},
+  author={Olivier P. Faugeras},
+  year={2012},
+  url={http://hal.archives-ouvertes.fr/docs/00/78/00/82/PDF/sklar_by_convolution4_plain.pdf},
+  note={Working Paper}
+}
