--- a/tex/pretext/agradecimentos.tex
+++ b/tex/pretext/agradecimentos.tex
@@ -14,6 +14,6 @@ Agradeço a todo resto da minha família: irmãos, irmãs, madrastas, avôs e av
 
 Agradeço aos meus amigos Caio, Camila, Henrique e Andrea, que tão próximos estiveram e tanto fizeram por mim e minha pequena família nos últimos anos. Vocês fizeram por mim muito mais do que eu posso retribuir, oferecendo ajuda mesmo sem eu pedir.
 
-Agradeço ao CNPQ pelo financiamento desse trabalho.
+Agradeço ao Conselho Nacional de Desenvolvimento Científico e Tecnológico (CNPQ) pelo auxílio financeiro, e à Universidade de São Paulo por ter sido minha casa pelos últimos 13 anos. 
 
 \end{titlepage}
