--- a/tex/pretext/agradecimentos.tex
+++ b/tex/pretext/agradecimentos.tex
@@ -6,7 +6,7 @@ Dedico essa tese à minha filha Sônia Braga Calsaverini. Houve um tempo em que 
 
 \chapter*{Agradecimentos}
 
-Agradeço à minha esposa Ana Paola pela paciência para suportar minhas angústias, pela presença constante e apoio e por me proporcionar a maior alegria do universo, que é a minha filha. Agradeço à minha mãe Lourdes e ao meu pai José Arimatéia por mais do que a simples existência, por uma existência plena de realizações que só foi possível por causa de vocês. Agradeço à minha sogra, Maria de Lourdes, por ter sido minha quase mãe nesses últimos 6 anos e por ter suportado toda a aporrinhação de ter um genro em casa por tanto tempo.
+Agradeço à minha esposa Ana Paola pela paciência para suportar minhas angústias, pela presença constante e apoio e por me proporcionar a maior alegria do universo, que é a minha filha. Agradeço à minha mãe Lourdes e ao meu pai José Arimatea por mais do que a simples existência, por uma existência plena de realizações que só foi possível por causa de vocês. Agradeço à minha sogra, Maria de Lourdes, por ter sido minha quase mãe nesses últimos 6 anos e por ter suportado toda a aporrinhação de ter um genro em casa por tanto tempo.
 
 Agradeço aos professores Nestor Caticha e Renato Vicente pelos cinco anos de paciência e por proporcionar em nosso grupo de pesquisa uma ambiente intelectual que acredito ser ímpar no Instituto de Física e raro em toda a Universidade de São Paulo. Não tenho dúvida de que esse ambiente era o lugar certo para o meu doutorado e que a orientação desses dois professores foram peça chave da minha maturação intelectual. 
 
@@ -16,4 +16,4 @@ Agradeço aos meus amigos Caio, Camila, Henrique e Andrea, que tão próximos es
 
 Agradeço ao Conselho Nacional de Desenvolvimento Científico e Tecnológico (CNPQ) pelo auxílio financeiro, e à Universidade de São Paulo por ter sido minha casa pelos últimos 13 anos. 
 
-\end{titlepage}
+    \end{titlepage}
