--- a/main.tex
+++ b/main.tex
@@ -11,27 +11,27 @@
 \begin{document}
   %\maketitle
   %pretextual area  
-	  \input{./tex/pretext/paginatitulo}
+% 	  \input{./tex/pretext/paginatitulo}
 	  \input{./tex/pretext/folhaderosto}
-	  \input{./tex/pretext/creativecommons}
-	  \input{./tex/pretext/agradecimentos}
-	  \input{./tex/pretext/epigrafe}
-	  \include{./tex/pretext/resumo}
-	  \listoffigures
-	  \tableofcontents
-  %body of chapters
-	  \include{./tex/introducao}
-	  \include{./tex/copulas}
-	  \include{./tex/autoridade}
-	  \include{./tex/conclusoes}
-  %bibliography
-	  %\bibliographystyle{abbrvnat}
-	  \bibliographystyle{unsrtnat}
-	  \bibliography{bibdatabase}
-
-  %body of appendices
-  \appendix
-	  \include{./tex/apendices/sklar}
-	  \include{./tex/apendices/provas}
+% 	  \input{./tex/pretext/creativecommons}
+% 	  \input{./tex/pretext/agradecimentos}
+% 	  \input{./tex/pretext/epigrafe}
+% 	  \include{./tex/pretext/resumo}
+% 	  \listoffigures
+% 	  \tableofcontents
+%   %body of chapters
+% 	  \include{./tex/introducao}
+% 	  \include{./tex/copulas}
+% 	  \include{./tex/autoridade}
+% 	  \include{./tex/conclusoes}
+%   %bibliography
+% 	  %\bibliographystyle{abbrvnat}
+% 	  \bibliographystyle{unsrtnat}
+% 	  \bibliography{bibdatabase}
+% 
+%   %body of appendices
+%   \appendix
+% 	  \include{./tex/apendices/sklar}
+% 	  \include{./tex/apendices/provas}
 
 \end{document}
