--- a/tex/pretext/details.tex
+++ b/tex/pretext/details.tex
@@ -1,5 +1,5 @@
 \newcommand{\titletext}{\protect{Tópicos} em Mecânica Estatística de Sistemas Complexos} 
-\newcommand{\subtitletext}{Uma abordagem mecânico-estatística de dois tópicos de interesse em finanças, economia e sociologia.}
+\newcommand{\subtitletext}{uma abordagem mecânico-estatística de dois tópicos de interesse em finanças, economia e sociologia.}
 \newcommand{\authorinfo}{Rafael S. Calsaverini} 
 
 \title{\titletext}
