--- a/tex/pretext/folhaderosto.tex
+++ b/tex/pretext/folhaderosto.tex
@@ -4,27 +4,35 @@
 
 % Upper part of the page
 
-\textsc{\LARGE Universidade de São Paulo - Instituto de Física}\\[3cm]
+\textsc{\LARGE Universidade de São Paulo - Instituto de Física}\\[2cm]
 
 % Title
-\HRule \\[0.4cm]
-\textsc{\textit{\titlefont {\titletext}\\[1.0cm] \subtitlefont {\subtitletext}}}
-\HRule\\[2.2cm]
-\textsc{\LARGE \authorinfo }\\[1.5cm]
+\HRule \\[0.2cm]
+\textsc{\textit{\titlefont {\titletext:}\\[0.0cm] \subtitlefont {\subtitletext}}}
+\HRule\\[1.2cm]
+\textsc{\LARGE \authorinfo }\\[1.cm]
 \hfill\begin{minipage}{0.7\textwidth}
 \Large
 Tese de doutorado apresentada ao Instituto de Física para a obtenção do título de Doutor em Ciências. 
 \end{minipage}\\[1.cm]
 % Author and supervisor
-\hfill\begin{minipage}{0.7\textwidth}
+\hfill\begin{minipage}{0.9\textwidth}
 \Large
 
-\emph{Orientador:} \\
-Prof.~Dr. Nestor Felipe Caticha Alfonso\\
+\emph{Orientador:} Prof.~Dr. Nestor Felipe Caticha Alfonso\\
 
-\emph{Co-Orientador:} \\
-Prof.~Dr. Renato Vicente
+\emph{Co-Orientador:} Prof.~Dr. Renato Vicente
+\end{minipage}\\[1.5cm]
+\begin{minipage}[l]{1.5\textwidth}
+\Large\vfill
+\qquad\textit{Banca Examinadora:}\\
+Profª. Drª. Carmen Pimentel Cintra do Prado - (IFUSP) - (Presidente)\\
+Prof. Dr. André de Pinho Vieira - (IFUSP)\\
+Prof. Dr. Thadeu Josino Pereira Penna - (UFF)\\
+Prof. Dr. Marco Aurelio Pires Idiart - (UFRGS)\\
+Prof. Dr. José Fernando Fontanari - (IFSCUSP)
 \end{minipage}
+
 \vfill
 
 % Bottom of the page
