--- a/tex/pretext/paginatitulo.tex
+++ b/tex/pretext/paginatitulo.tex
@@ -4,13 +4,16 @@
 
 % Upper part of the page
 
-\textsc{\LARGE Universidade de São Paulo \\ Instituto de Física}\\[3cm]
+\textsc{\LARGE Universidade de São Paulo - Instituto de Física}\\[2cm]
 
 % Title
-\HRule \\[0.4cm]
-\textsc{\textit{\titlefont {\titletext}\\[1.0cm] \subtitlefont {\subtitletext}}}
-\HRule\\[2.2cm]
-\textsc{\LARGE \authorinfo }
+\HRule \\[0.2cm]
+\textsc{\textit{\titlefont {\titletext:}\\[0.0cm] \subtitlefont {\subtitletext}}}
+\HRule\\[1.2cm]
+\textsc{\LARGE \authorinfo }\\[1.cm]
+
+
+
 \vfill
 
 % Bottom of the page
